Assert on exit (related to persistent data) #87291

Closed
opened 2021-04-08 10:13:25 +02:00 by Philipp Oeser · 6 comments
Member

System Information
Operating system: Linux-5.11.7-200.fc33.x86_64-x86_64-with-glibc2.32 64 Bits
Graphics card: GeForce GTX 970M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.67

Blender Version
Broken: version: 2.93.0 Alpha, branch: master (modified), commit date: 2021-04-08 06:36, hash: b7b1b2325c
Caused by 50782df425

Short description of error
Assert on exit (related to persistent data)

Exact steps for others to reproduce the error
from the default startup file:

  • change to Material Properties tab in the Properties Editor
  • close blender
    • Assert

1   raise                                            0x7ffff77c39d5 
2   abort                                            0x7ffff77ac8a4 
3   _BLI_assert_abort           BLI_assert.c    56   0xd29e535      
4   engine_depsgraph_free       engine.c        151  0xac3664d      
5   RE_engine_free              engine.c        172  0xac366cd      
6   re_free_persistent_data     pipeline.c      695  0xac3f13d      
7   RE_FreePersistentData       pipeline.c      711  0xac3f1a0      
8   ED_render_engine_changed    render_update.c 191  0x62219e9      
9   rna_RenderEngine_unregister rna_render.c    302  0x42c6a99      
10  pyrna_unregister_class      bpy_rna.c       9095 0x43c29fa      
11  cfunction_vectorcall_O      methodobject.c  512  0xb43f533      
12  _PyObject_VectorcallTstate  abstract.h      118  0x3448fec      
13  PyObject_Vectorcall         abstract.h      127  0x3448fec      
14  call_function               ceval.c         5072 0x3448fec      
15  _PyEval_EvalFrameDefault    ceval.c         3518 0x3448fec      
16  _PyEval_EvalFrame           pycore_ceval.h  40   0x344268b      
17  function_code_fastcall      call.c          330  0x344268b      
18  _PyObject_VectorcallTstate  abstract.h      118  0x3449c3d      
19  PyObject_Vectorcall         abstract.h      127  0x3449c3d      
20  call_function               ceval.c         5072 0x3449c3d
**System Information** Operating system: Linux-5.11.7-200.fc33.x86_64-x86_64-with-glibc2.32 64 Bits Graphics card: GeForce GTX 970M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.67 **Blender Version** Broken: version: 2.93.0 Alpha, branch: master (modified), commit date: 2021-04-08 06:36, hash: `b7b1b2325c` Caused by 50782df425 **Short description of error** Assert on exit (related to persistent data) **Exact steps for others to reproduce the error** from the default startup file: - change to Material Properties tab in the Properties Editor - close blender - > Assert ``` 1 raise 0x7ffff77c39d5 2 abort 0x7ffff77ac8a4 3 _BLI_assert_abort BLI_assert.c 56 0xd29e535 4 engine_depsgraph_free engine.c 151 0xac3664d 5 RE_engine_free engine.c 172 0xac366cd 6 re_free_persistent_data pipeline.c 695 0xac3f13d 7 RE_FreePersistentData pipeline.c 711 0xac3f1a0 8 ED_render_engine_changed render_update.c 191 0x62219e9 9 rna_RenderEngine_unregister rna_render.c 302 0x42c6a99 10 pyrna_unregister_class bpy_rna.c 9095 0x43c29fa 11 cfunction_vectorcall_O methodobject.c 512 0xb43f533 12 _PyObject_VectorcallTstate abstract.h 118 0x3448fec 13 PyObject_Vectorcall abstract.h 127 0x3448fec 14 call_function ceval.c 5072 0x3448fec 15 _PyEval_EvalFrameDefault ceval.c 3518 0x3448fec 16 _PyEval_EvalFrame pycore_ceval.h 40 0x344268b 17 function_code_fastcall call.c 330 0x344268b 18 _PyObject_VectorcallTstate abstract.h 118 0x3449c3d 19 PyObject_Vectorcall abstract.h 127 0x3449c3d 20 call_function ceval.c 5072 0x3449c3d ```
Author
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Author
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Author
Member

Added subscriber: @brecht

Added subscriber: @brecht
Author
Member

Caused by 50782df425

@brecht : cant really tell if this is High priority?

Caused by 50782df425 @brecht : cant really tell if this is High priority?
Philipp Oeser changed title from Assert on exit to Assert on exit (related to persistent data) 2021-04-08 10:29:12 +02:00

This issue was referenced by d244067d12

This issue was referenced by d244067d12442709bf080b3f9449e0b62d4b704c

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Brecht Van Lommel self-assigned this 2021-04-08 13:20:36 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#87291
No description provided.