Fix T87291: assert on exit with preview render

Don't keep around persistent data in this case.